<resources>
    <string name="app_name">eWalleKT</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open_an_account_for_digital_e_wallet_solutions_instant_payouts_join_for_free">
        Open An Account For Digital \nE-Wallet Solutions.Instant \nPayouts. \n \nJoin For Free.
    </string>
    <string name="ewalle">eWalle</string>
    <string name="account_overview">Account Overview</string>
    <string name="current_balance">Current balance</string>
    <string name="send_money">Send Money</string>
    <string name="services">Services</string>
    <string name="create_an_account">Create an account</string>
    <string name="sign_in">Sign in</string>
    <string name="_34_c">34° C</string>
    <string name="logout">Logout</string>
    <string name="version">Version</string>
</resources>