<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.LoginFragment">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="fitStart"
        android:src="@drawable/art_ewalle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginStart="-40dp"
        android:background="@color/main_background_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView4"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="26dp"
            android:fontFamily="@font/ubuntu"
            android:text="@string/ewalle"
            android:textColor="@color/logo_text_color"
            android:textSize="28sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.45" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="26dp"
            android:layout_marginBottom="17dp"
            android:src="@drawable/logo_ewalle"
            app:layout_constraintBottom_toTopOf="@+id/textView4"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="26dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="27dp"
            android:fontFamily="@font/avenir_next"
            android:text="@string/open_an_account_for_digital_e_wallet_solutions_instant_payouts_join_for_free"
            android:textColor="#7B7F9E"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <TextView
            android:id="@+id/fl_create_acc_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="53dp"
            android:fontFamily="@font/avenir_next"
            android:gravity="center"
            android:text="@string/create_an_account"
            android:textColor="@color/login_create_text_color"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/fl_sign_in_button"
            android:layout_width="0dp"
            android:layout_height="50dip"
            android:layout_marginStart="26dp"
            android:layout_marginEnd="26dp"
            android:layout_marginBottom="26dp"
            app:cardBackgroundColor="#FFAC30"
            app:cardCornerRadius="10dip"
            app:cardElevation="0dip"
            app:layout_constraintBottom_toTopOf="@+id/fl_create_acc_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/avenir_next_bold"
                    android:text="@string/sign_in"
                    android:textColor="#212330"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/imageView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:src="@drawable/sign_in_arrow"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/textView7"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <TextClock
            android:id="@+id/textClock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="26dp"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/avenir_next"
            android:format12Hour="hh:mm aa"
            android:format24Hour="hh:mm aa"
            android:text="Text Clock"
            android:textColor="@color/logo_text_color"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextClock
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="26dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/avenir_next"
            android:format12Hour="MMM.dd.yyyy | EEEE"
            android:format24Hour="hh:mm aa"
            android:text="Another Text Clock"
            android:textColor="#7B7F9E"
            android:textSize="13sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textClock" />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="38dp"
            android:src="@drawable/weather_cloud"
            app:layout_constraintStart_toEndOf="@+id/textClock"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="35dp"
            android:fontFamily="@font/avenir_next"
            android:text="@string/_34_c"
            android:textColor="@color/logo_text_color"
            android:textSize="13sp"
            app:layout_constraintStart_toEndOf="@+id/imageView7"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>