<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background_color"
    tools:context=".views.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/fh_name_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="31dp"
                android:fontFamily="@font/ubuntu"
                android:text="@string/ewalle"
                android:textColor="@color/logo_text_color"
                android:textSize="28sp"
                app:layout_constraintStart_toEndOf="@+id/fh_logo"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/fh_menu_button"
                android:layout_width="19dip"
                android:layout_height="19dip"
                android:layout_marginTop="37dp"
                android:layout_marginEnd="25dp"
                android:src="@drawable/open_menu_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/fh_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="31dp"
                android:src="@drawable/logo_ewalle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dip"
                    android:layout_marginTop="50dip"
                    android:layout_marginBottom="20dip"
                    android:fontFamily="@font/avenir_next"
                    android:text="@string/account_overview"
                    android:textColor="@color/sections_text_color"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginStart="25dip"
                    android:layout_marginEnd="25dip"
                    app:cardBackgroundColor="@color/cards_background_color"
                    app:cardCornerRadius="12dip"
                    app:cardElevation="0dip">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/fh_balanceTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="24dp"
                            android:layout_marginTop="24dp"
                            android:layout_weight="1"
                            android:fontFamily="@font/avenir_next"
                            android:text="123"
                            android:textColor="@color/balance_text_color"
                            android:textSize="24sp"
                            android:textStyle="bold"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <View
                            android:id="@+id/view2"
                            android:layout_width="52dip"
                            android:layout_height="52dip"
                            android:layout_marginEnd="24dp"
                            android:foreground="@drawable/ic_friend_add_circle_button"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="1.0"
                            app:layout_constraintStart_toEndOf="@+id/fh_balanceTextView"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/fh_balanceLabel"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="24dp"
                            android:layout_marginTop="8dp"
                            android:layout_marginBottom="24dp"
                            android:fontFamily="@font/avenir_next"
                            android:text="@string/current_balance"
                            android:textColor="@color/sections_text_color"
                            android:textSize="12sp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/fh_balanceTextView" />
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.cardview.widget.CardView>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="25dp"
                        android:layout_marginTop="40dp"
                        android:layout_marginBottom="20dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/avenir_next"
                        android:text="@string/send_money"
                        android:textColor="@color/sections_text_color"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="40dp"
                        android:layout_marginEnd="25dp"
                        android:src="@drawable/send_money"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/fh_recyclerViewFriends"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                </androidx.recyclerview.widget.RecyclerView>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="25dip"
                        android:layout_marginTop="40dp"
                        android:layout_marginBottom="20dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/avenir_next"
                        android:text="@string/services"
                        android:textColor="@color/sections_text_color"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="40dp"
                        android:layout_marginEnd="25dp"
                        android:src="@drawable/services"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/fh_recyclerViewServices"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                </androidx.recyclerview.widget.RecyclerView>

            </LinearLayout>


        </ScrollView>


    </LinearLayout>

</FrameLayout>